PHIOPT: Move check on diamond bb to tree_ssa_phiopt_worker from minmax_replacement

This moves the check to make sure on the diamond shaped form bbs that
the the two middle bbs are only for that diamond shaped form earlier
in the shared code.
Also remove the redundant check for single_succ_p since that was already
done before hand.
The next patch will simplify the code even further and remove redundant
checks.

	PR tree-optimization/109604

gcc/ChangeLog:

	* tree-ssa-phiopt.cc (tree_ssa_phiopt_worker): Move the
	diamond form check from ...
	(minmax_replacement): Here.

gcc/testsuite/ChangeLog:

	* gcc.c-torture/compile/pr109604-1.c: New test.
	* gcc.c-torture/compile/pr109604-2.c: New test.